{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 224,
  "lineage": "52743137-5c1c-50e2-26ac-6e97fe573b38",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/publicIPAddresses/bastion-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.137.205.25",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "bastion-ip",
            "resource_group_name": "Medilync-ProdRG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.prod",
            "module.network.azurerm_subnet.this",
            "module.network.azurerm_subnet_network_security_group_association.assoc",
            "module.network.azurerm_virtual_network.this",
            "module.nsg.azurerm_network_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.255.0/27"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/virtualNetworks/medilync-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Medilync-ProdRG",
            "virtual_network_name": "medilync-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.prod",
            "module.network.azurerm_subnet.this",
            "module.network.azurerm_subnet_network_security_group_association.assoc",
            "module.network.azurerm_virtual_network.this",
            "module.nsg.azurerm_network_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "db01",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/networkInterfaces/db01-nic",
            "internal_domain_name_suffix": "qxvhmoyhpfzundxxzgdxafwc1g.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/virtualNetworks/medilync-vnet/subnets/internal"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-1E-52-5E-12-F5",
            "name": "db01-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Medilync-ProdRG",
            "virtual_machine_id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Compute/virtualMachines/db01"
          },
          "dependencies": [
            "azurerm_resource_group.dev",
            "azurerm_resource_group.prod",
            "module.compute.azurerm_public_ip.pip",
            "module.network.azurerm_subnet.this",
            "module.network.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "dev01",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-DevRG/providers/Microsoft.Network/networkInterfaces/dev01-nic",
            "internal_domain_name_suffix": "qxvhmoyhpfzundxxzgdxafwc1g.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/virtualNetworks/medilync-vnet/subnets/dev"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "60-45-BD-8F-C8-9A",
            "name": "dev01-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "Medilync-DevRG",
            "virtual_machine_id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-DevRG/providers/Microsoft.Compute/virtualMachines/dev01"
          },
          "dependencies": [
            "azurerm_resource_group.dev",
            "azurerm_resource_group.prod",
            "module.compute.azurerm_public_ip.pip",
            "module.network.azurerm_subnet.this",
            "module.network.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "web01",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/networkInterfaces/web01-nic",
            "internal_domain_name_suffix": "qxvhmoyhpfzundxxzgdxafwc1g.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/publicIPAddresses/web01-pip",
                "subnet_id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/virtualNetworks/medilync-vnet/subnets/dmz"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-ED-8D-0D-07-00",
            "name": "web01-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "Medilync-ProdRG",
            "virtual_machine_id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Compute/virtualMachines/web01"
          },
          "dependencies": [
            "azurerm_resource_group.dev",
            "azurerm_resource_group.prod",
            "module.compute.azurerm_public_ip.pip",
            "module.network.azurerm_subnet.this",
            "module.network.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "web01",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/publicIPAddresses/web01-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.119.130.230",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "web01-pip",
            "resource_group_name": "Medilync-ProdRG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.dev",
            "azurerm_resource_group.prod",
            "module.network.azurerm_subnet.this",
            "module.network.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "dev",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/virtualNetworks/medilync-vnet/subnets/dev",
            "name": "dev",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Medilync-ProdRG",
            "virtual_network_name": "medilync-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.prod",
            "module.network.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "dmz",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/virtualNetworks/medilync-vnet/subnets/dmz",
            "name": "dmz",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Medilync-ProdRG",
            "virtual_network_name": "medilync-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.prod",
            "module.network.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "internal",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/virtualNetworks/medilync-vnet/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Medilync-ProdRG",
            "virtual_network_name": "medilync-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.prod",
            "module.network.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "dev",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/virtualNetworks/medilync-vnet/subnets/dev",
            "network_security_group_id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/networkSecurityGroups/dev-nsg",
            "subnet_id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/virtualNetworks/medilync-vnet/subnets/dev"
          },
          "dependencies": [
            "azurerm_resource_group.prod",
            "module.network.azurerm_subnet.this",
            "module.network.azurerm_virtual_network.this",
            "module.nsg.azurerm_network_security_group.this"
          ]
        },
        {
          "index_key": "dmz",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/virtualNetworks/medilync-vnet/subnets/dmz",
            "network_security_group_id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/networkSecurityGroups/dmz-nsg",
            "subnet_id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/virtualNetworks/medilync-vnet/subnets/dmz"
          },
          "dependencies": [
            "azurerm_resource_group.prod",
            "module.network.azurerm_subnet.this",
            "module.network.azurerm_virtual_network.this",
            "module.nsg.azurerm_network_security_group.this"
          ]
        },
        {
          "index_key": "internal",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/virtualNetworks/medilync-vnet/subnets/internal",
            "network_security_group_id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/networkSecurityGroups/internal-nsg",
            "subnet_id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/virtualNetworks/medilync-vnet/subnets/internal"
          },
          "dependencies": [
            "azurerm_resource_group.prod",
            "module.network.azurerm_subnet.this",
            "module.network.azurerm_virtual_network.this",
            "module.nsg.azurerm_network_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3b76ea85-7907-4673-8ef7-c9877016c2de",
            "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/virtualNetworks/medilync-vnet",
            "location": "westeurope",
            "name": "medilync-vnet",
            "resource_group_name": "Medilync-ProdRG",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/virtualNetworks/medilync-vnet/subnets/dmz",
                "name": "dmz",
                "security_group": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/networkSecurityGroups/dmz-nsg"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/virtualNetworks/medilync-vnet/subnets/internal",
                "name": "internal",
                "security_group": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/networkSecurityGroups/internal-nsg"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/virtualNetworks/medilync-vnet/subnets/dev",
                "name": "dev",
                "security_group": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/networkSecurityGroups/dev-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.prod"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "dev-nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/networkSecurityGroups/dev-nsg",
            "location": "westeurope",
            "name": "dev-nsg",
            "resource_group_name": "Medilync-ProdRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Bastion",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.255.0/27",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.prod"
          ]
        },
        {
          "index_key": "dmz-nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/networkSecurityGroups/dmz-nsg",
            "location": "westeurope",
            "name": "dmz-nsg",
            "resource_group_name": "Medilync-ProdRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTPS-Inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.prod"
          ]
        },
        {
          "index_key": "internal-nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/networkSecurityGroups/internal-nsg",
            "location": "westeurope",
            "name": "internal-nsg",
            "resource_group_name": "Medilync-ProdRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTPS-from-DMZ",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.prod"
          ]
        }
      ]
    },
    {
      "module": "module.nsg",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "dev-nsg-Allow-Bastion",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/networkSecurityGroups/dev-nsg/securityRules/Allow-Bastion",
            "name": "Allow-Bastion",
            "network_security_group_name": "dev-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Medilync-ProdRG",
            "source_address_prefix": "10.0.255.0/27",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.prod",
            "module.nsg.azurerm_network_security_group.this"
          ]
        },
        {
          "index_key": "dmz-nsg-Allow-HTTPS-Inbound",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/networkSecurityGroups/dmz-nsg/securityRules/Allow-HTTPS-Inbound",
            "name": "Allow-HTTPS-Inbound",
            "network_security_group_name": "dmz-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Medilync-ProdRG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.prod",
            "module.nsg.azurerm_network_security_group.this"
          ]
        },
        {
          "index_key": "internal-nsg-Allow-HTTPS-from-DMZ",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/bfd3e04f-5944-40b1-b6ea-274490375b48/resourceGroups/Medilync-ProdRG/providers/Microsoft.Network/networkSecurityGroups/internal-nsg/securityRules/Allow-HTTPS-from-DMZ",
            "name": "Allow-HTTPS-from-DMZ",
            "network_security_group_name": "internal-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Medilync-ProdRG",
            "source_address_prefix": "10.0.0.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.prod",
            "module.nsg.azurerm_network_security_group.this"
          ]
        }
      ]
    }
  ]
}